<?xml version="1.0"?>
<package>
  <name>ros_ethernet_rmp</name>
  <version>0.0.8</version>
  <description>ROS Wrapper for the Segway RMP Ethernet Python Driver</description>

  <maintainer email="russell.toris@gmail.com">Russell Toris</maintainer>
  <maintainer email="dekent@gatech.edu">David Kent</maintainer>
  <author>SEGWAY Inc.</author>
  <author email="cmdunkers@wpi.edu">Chris Dunkers</author>
  <author email="dekent@gatech.edu">David Kent</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ros_ethernet_rmp</url>
  <url type="bugtracker">https://github.com/GT-RAIL/ros_ethernet_rmp/issues</url>
  <url type="repository">https://github.com/GT-RAIL/ros_ethernet_rmp</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>battery_monitor_rmp</run_depend>
  <run_depend>rmp_msgs</run_depend>
</package>
